# multistream-chat-aggregator

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  youtube-remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  stream_list.proto
src/components/: ChatFeed.tsx  ChatMessage.tsx  ConnectionCard.tsx  Sidebar.tsx  StatusBar.tsx
src/pages/: ChatPage.tsx  Dashboard.tsx  Overlay.tsx  Settings.tsx
src/services/: twitch.ts  youtube.ts  youtubeApi.ts
src/utils/: environment.ts
