[package]
name = "stream-chat-aggregator"
version = "1.0.0"
description = "Aggregate YouTube and Twitch live chat"
authors = [""]
edition = "2021"

[lib]
name = "stream_chat_aggregator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
