[package]
name = "stream-chat-aggregator"
version = "1.0.0"
description = "Aggregate YouTube and Twitch live chat"
authors = [""]
edition = "2021"

[lib]
name = "stream_chat_aggregator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.11"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tiny_http = "0.12"
tonic = { version = "0.11", features = ["tls", "tls-roots", "tls-webpki-roots", "codegen", "prost"] }
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
